Sun Aug 07 21:59:19 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* php/Makefile.am,php/docs/examples/,php/smoketest.php: Change
	  'include "php5/xapian.php"' to 'include "xapian.php"' in
	  smoketest.php and the examples, and set include_path=php5 in
	  TESTS_ENVIRONMENT so smoketest.php finds the uninstalled
	  xapian.php.

Sun Aug 07 21:57:05 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/smoketest.lua: Add simple test for
	  Database::positionlist_begin().

Sun Aug 07 10:25:41 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* csharp/SmokeTest.cs: Add test coverage for QueryParser.ParseQuery()
	  with flags argument.

Sat Aug 06 14:20:06 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/t/symbol-test.t: Fix to work when built against an installed
	  xapian-core.  (ticket#558)

Tue Jun 28 11:57:22 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/util.i.in: WritableDatabase::delete_document() was broken by
	  the migration to wrapping <xapian/database.h> directly - now fixed
	  and cleaned up how we wrap delete_document_by_term(),
	  replace_document() and replace_document_by_term().

Tue Jun 28 11:39:01 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/util.i: Rename SWIG_anystring_as_ptr to
	  XapianSWIG_anystring_as_ptr as it's not a part of SWIG itself.
	  Handle generating XapianSWIG_anystring_as_ptr in the right place
	  in the file by specifying it with %fragment, and specify its
	  dependency on the fragment SWIG_AsPtr_std_string.

Tue Jun 28 06:54:07 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* xapian.i: Add missing wrapper for Database::has_positions() and
	  correct the return type of Database::get_doclength() from double to
	  Xapian::termcount.

Tue Jun 28 06:37:04 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk: